# mqtt-service-example-rs

./: App.toml.sample  Cargo.toml  README.md  skaffold.yaml
docker/: Dockerfile  develop.dockerfile  develop.run.sh
k8s/: mqtt-svc-ex-config.yaml  mqtt-svc-ex-environment.yaml  mqtt-svc-ex-headless.yaml  mqtt-svc-ex.yaml
src/: main.rs
src/app/: config.rs  mod.rs
src/app/endpoint/: message.rs  mod.rs
